Removendo WheatherForecast e criando TodoItemController

--- a/src/TODO.Service.Application/TODO.Service.Application.csproj
+++ b/src/TODO.Service.Application/TODO.Service.Application.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Todo.Service.Persistence\Todo.Service.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="TodoItems\Queries\Search\" />
+  </ItemGroup>
+
 </Project>
