--- a/tests/TODO.Service.UnitTest/TODO.Service.UnitTest.csproj
+++ b/tests/TODO.Service.UnitTest/TODO.Service.UnitTest.csproj
@@ -40,7 +40,8 @@
   </ItemGroup>
 	
   <ItemGroup>
-    <Folder Include="Application\TodoItems\Commands\" />
+    <Folder Include="Application\TodoItems\Commands\Create\" />
+    <Folder Include="Application\TodoItems\Commands\Edit\" />
   </ItemGroup>
 
 </Project>
